--- a/index.html
+++ b/index.html
@@ -1,59 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
-    <link rel="stylesheet" href="styles.css">
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <header>
-            <nav>
-                
-                <div class="nav-links">
-                    <a href="https://porfolio-content.vercel.app/">Home</a>
-                    <a href="https://porfolio-content.vercel.app/about.html">About</a>
-                    <a href="https://porfolio-content.vercel.app/education.html">Education</a>
-                    <a href="https://porfolio-content.vercel.app/portfolio.html">Projects</a>
-                    <a href="https://porfolio-content.vercel.app/contact.html">Contact</a>
-                </div>
-                <a href="#" class="logo">Portfolio</a>
-            </nav>
-        </header>
-        <div class="content">
-            <div class="hero-text">
-                <h1>Janna Fel Mari A. Lucea</h1>
-                <span>Finance Student</span>
-                <p>Finance major with strong leadership skills and practical experience. Demonstrated excellence in financial analysis, investment strategies,
-and economic principles.<br>
-                </p>
-                    <a href="https://drive.google.com/file/d/1kIk8FspjIlM8MKxZuytebXVp7AhZIie2/view?usp=sharing" class="btn"> Download CV</a> 
-            </div>
-            <div class="hero-img">
-                <img src="janna.JPG" alt="profile">
-            </div>
-            <div class="social-links-footer">
-                <a href="https://web.facebook.com/marcusgabrielle.guiban.1"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/marcus_gguiban/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/marcus-gabrielle-guiban-30355b276"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/marcusguiban"><i class="fa-brands fa-github"></i></a>
-            </div>
+      <header>
+        <nav>
+          <div class="nav-links">
+            <a href="https://porfolio-content.vercel.app/">Home</a>
+            <a href="https://porfolio-content.vercel.app/about.html">About</a>
+            <a href="https://porfolio-content.vercel.app/education.html"
+              >Education</a
+            >
+            <a href="https://porfolio-content.vercel.app/portfolio.html"
+              >Projects</a
+            >
+            <a href="https://porfolio-content.vercel.app/contact.html"
+              >Contact</a
+            >
+          </div>
+          <a href="#" class="logo">Portfolio</a>
+        </nav>
+      </header>
+      <div class="content">
+        <div class="hero-text">
+          <h1>Janna Fel Mari A. Lucea</h1>
+          <span>Finance Student</span>
+          <p>
+            Finance major with strong leadership skills and practical
+            experience. Demonstrated excellence in financial analysis,
+            investment strategies, and economic principles.<br />
+          </p>
+          <a
+            href="https://drive.google.com/file/d/1mPo8GDxF1wQ53vOHMIEr8G5anArHaDAv/view?usp=drivesdk"
+            class="btn"
+          >
+            Download Resume</a
+          >
         </div>
-        <div class="social-links">
-            <span>Follow me on</span>
-            <a href="https://web.facebook.com/marcusgabrielle.guiban.1"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/marcus_gguiban/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/marcus-gabrielle-guiban-30355b276"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/marcusguiban"><i class="fa-brands fa-github"></i></a>
+        <div class="hero-img">
+          <img src="janna.JPG" alt="profile" />
         </div>
-
+        <div class="social-links-footer">
+          <a href="https://web.facebook.com/marcusgabrielle.guiban.1"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/marcus_gguiban/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/marcus-gabrielle-guiban-30355b276"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/marcusguiban"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </div>
+      <div class="social-links">
+        <span>Follow me on</span>
+        <a href="https://www.facebook.com/share/1CTcR7Cq3i/?mibextid=wwXIfr"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/jnna_lcea?igsh=Z2FvbXU5NGo2a3l6&utm_source=qr"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <!-- <a href="https://www.linkedin.com/in/marcus-gabrielle-guiban-30355b276"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/marcusguiban"><i class="fa-brands fa-github"></i></a> -->
+      </div>
     </div>
-
-</body>
-
-
+  </body>
 </html>
