--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <header>
         <nav>
           <div class="nav-links">
-            <a href="https://porfolio-content.vercel.app/">Home</a>
-            <a href="https://porfolio-content.vercel.app/about.html">About</a>
-            <a href="https://porfolio-content.vercel.app/education.html"
+            <a href="https://janna-profolio-content.vercel.app/">Home</a>
+            <a href="https://janna-profolio-content.vercel.app/about.html">About</a>
+            <a href="https://janna-profolio-content.vercel.app/education.html"
               >Education</a
             >
-            <a href="https://porfolio-content.vercel.app/portfolio.html"
+            <a href="https://janna-profolio-content.vercel.app/ortfolio.html"
               >Projects</a
             >
-            <a href="https://porfolio-content.vercel.app/contact.html"
+            <a href="https://janna-profolio-content.vercel.app/contact.html"
               >Contact</a
             >
           </div>
@@ -51,19 +51,14 @@
           <img src="janna.JPG" alt="profile" />
         </div>
         <div class="social-links-footer">
-          <a href="https://web.facebook.com/marcusgabrielle.guiban.1"
+          <a href="https://www.facebook.com/share/1CTcR7Cq3i/?mibextid=wwXIfr"
             ><i class="fa-brands fa-facebook"></i
           ></a>
-          <a href="https://www.instagram.com/marcus_gguiban/"
+          <a href="https://www.instagram.com/jnna_lcea?igsh=Z2FvbXU5NGo2a3l6&utm_source=qr"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a
-            href="https://www.linkedin.com/in/marcus-gabrielle-guiban-30355b276"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-          <a href="https://github.com/marcusguiban"
-            ><i class="fa-brands fa-github"></i
-          ></a>
+
+
         </div>
       </div>
       <div class="social-links">
@@ -75,8 +70,7 @@
           href="https://www.instagram.com/jnna_lcea?igsh=Z2FvbXU5NGo2a3l6&utm_source=qr"
           ><i class="fa-brands fa-instagram"></i
         ></a>
-        <!-- <a href="https://www.linkedin.com/in/marcus-gabrielle-guiban-30355b276"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/marcusguiban"><i class="fa-brands fa-github"></i></a> -->
+
       </div>
     </div>
   </body>
