--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="https://janna-profolio-content.vercel.app/education.html"
               >Education</a
             >
-            <a href="https://janna-profolio-content.vercel.app/ortfolio.html"
+            <a href="https://janna-profolio-content.vercel.app/portfolio.html"
               >Projects</a
             >
             <a href="https://janna-profolio-content.vercel.app/contact.html"
